# VMFFmpegPlayer

./: .gitignore  ARCHITECTURE.md  README.md  build.gradle  deps.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/julis/wang/template/: MainActivity.kt
app/src/main/res/drawable/: btn_control_bg.xml  btn_control_secondary_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
docs/: tech.md
ffmpegplayer/: build.gradle  build_ffmpeg.sh  consumer-rules.pro  proguard-rules.pro
ffmpegplayer/src/main/: AndroidManifest.xml
ffmpegplayer/src/main/cpp/: CMakeLists.txt  ff_audio_decoder.cpp  ff_audio_decoder.h  ff_audio_render_loop.cpp  ff_audio_render_loop.h  ff_av_sync.cpp  ff_av_sync.h  ff_demuxer.cpp  ff_demuxer.h  ff_gl_renderer.h  ff_jni_callback.cpp  ff_jni_callback.h  ff_log.h  ff_media_source.cpp  ff_media_source.h  ff_packet_queue.h  ff_player_callback.h  ff_player_context.cpp  ff_player_context.h  ff_player_jni.cpp  ff_player_state.h  ff_read_thread.cpp  ff_read_thread.h  ff_timeline.h  ff_video_decoder.cpp  ff_video_decoder.h  ff_video_render_loop.cpp  ff_video_render_loop.h
ffmpegplayer/src/main/java/com/vompom/ffmpegplayer/: FFPlayer.kt  FFPlayerView.kt
lib_effect/: build.gradle
lib_effect/src/androidTest/java/com/vompom/effect/: ExampleInstrumentedTest.kt
lib_effect/src/main/cpp/: CMakeLists.txt  effect_pipeline.cpp  effect_pipeline.h  i_effect.h  speed_effect.cpp  speed_effect.h
lib_effect/src/main/java/com/vompom/effect/: EffectManager.kt  EffectType.kt  IEffect.kt  SpeedEffect.kt
lib_effect/src/test/java/com/vompom/effect/: ExampleUnitTest.kt
